Fixed z-index of toolbuttons of graph
The toolbuttons of the Graph were put on top of the menu due to
a z-index of 5000. We have overridden this to 100 and can still
confirm it is above the image but now below the menu.

--- a/css/template.css
+++ b/css/template.css
@@ -447,6 +447,11 @@ div.labels
     font-weight: bold;
 }
 
+.iviewer_common
+{
+    z-index: 100;
+}
+
 @media (min-width: 980px)
 {
     a[name]
